--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./variables.css";
 
 @layer base {
   html,
@@ -8,6 +9,6 @@
   }
 
   * {
-    color: white;
+    color: var(--White);
   }
 }
